# mcp-gmail

./: .env.example  .gitignore  Dockerfile  README.md  config.py  custom_exceptions.py  docker-compose.yml  main.py  pyproject.toml
api/: gmail.py
mcp_servers/gmail/: gmail.py  src.py  tools.py
